<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="193dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Bienvenido"
                    android:fontFamily="@font/bebita"
                    android:textColor="#9CCA3A"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cvNombreusuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Usuario Nombre:"
                    android:fontFamily="@font/bebita"
                    android:textColor="@color/verdezxin"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtNombreDinamico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text=""
                    android:fontFamily="@font/zeloso"
                    android:textColor="@color/ANTI"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/txtCodigousuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Código:"
                    android:fontFamily="@font/bebita"
                    android:textColor="@color/verdezxin"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCodigoDinamico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text=""
                    android:fontFamily="@font/zeloso"
                    android:textColor="@color/ANTI"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/basurita" />

            </LinearLayout>
        </LinearLayout>

        <!-- Contenedor con GridLayout para 2 columnas -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardresiduo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_columnWeight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/fondocard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/marcio"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/resi"
                        android:textSize="18sp"
                        android:fontFamily="@font/bebita"
                        android:textStyle="bold"
                        android:textColor="#4A4A4A"
                        android:paddingTop="5dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
                android:id="@+id/cardReporte"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_columnWeight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
            app:cardBackgroundColor="@color/fondocard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/general"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/report"
                        android:textSize="18sp"
                        android:fontFamily="@font/bebita"
                        android:textStyle="bold"
                        android:textColor="#4649E3"
                        android:paddingTop="5dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:id="@+id/normativaCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_columnWeight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/fondocard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/justic"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Normas"
                        android:textSize="18sp"
                        android:fontFamily="@font/bebita"
                        android:textStyle="bold"
                        android:textColor="#246D00"
                        android:paddingTop="5dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_identi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_columnWeight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/fondocard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/identifi"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/id"
                        android:fontFamily="@font/bebita"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:paddingTop="5dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_ayuda"
                android:layout_gravity=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_columnWeight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/fondocard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/soportedeverda"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ayuda"
                        android:textSize="18sp"
                        android:fontFamily="@font/bebita"
                        android:textStyle="bold"
                        android:textColor="#005676"
                        android:paddingTop="5dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardTop"
                android:layout_gravity=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_columnWeight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/fondocard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/zapaan"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lista"
                        android:textSize="18sp"
                        android:fontFamily="@font/bebita"
                        android:textStyle="bold"
                        android:textColor="#005676"
                        android:paddingTop="5dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

        <!-- Botón para volver -->
        <Button
            android:id="@+id/btn_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:drawableRight="@drawable/cerrarsesion"
            android:fontFamily="@font/bebita"
            android:textSize="14sp"
            android:backgroundTint="@color/verdezxin"
            android:textColor="@color/black"
            android:padding="8dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</ScrollView>
